--- a/public/views/templates/welcome.tpl.html
+++ b/public/views/templates/welcome.tpl.html
@@ -14,22 +14,39 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12 col-xs-12 welcome-wrapper-one">
+            <div id="welcome-name-wrapper">
+                <h1>Michael Montgomery</h1><br>
+                <h2>Full-Stack Web Developer | UI/UX Consultant</h2>
+                <ul>
+                    <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-github" aria-hidden="true"></i></li>
+                </ul>
+            </div>
 
         </div>
     </div>
 </div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12 col-xs-12 welcome-about-wrapper">
+
+            </p>
+        </div>
+    </div>
+</div>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12 welcome-wrapper-two">
-            <div id="tri-div-wrapper">
-                <div class="tri-div" id="tri-div-one">
-                    tri div 1
+            <div id="dual-div-wrapper">
+                <div class="dual-div" id="left-dual-div">
+                    <h2>Design.</h2>
                 </div>
-                <div class="tri-div" id="tri-div-two">
-                    tri div 2
-                </div>
-                <div class="tri-div" id="tri-div-three">
-                    tri div 3
+                <div class="dual-div" id="right-dual-div">
+                    <h2>Re-designed.</h2>
                 </div>
             </div>
         </div>
@@ -38,25 +55,22 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-12 col-xs-12 welcome-about-wrapper">
-            about me
+        <div class="col-md-12 welcome-picture-wrapper">
+
         </div>
     </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12 col-xs-12 welcome-wrapper-three">
-            <div class="lang-div" id="left-lang-div">languages</div>
-            <div class="lang-div" id="right-lang-div">languages</div>
-        </div>
-    </div>
-</div>
+
+
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12 col-xs-12 welcome-wrapper-four">
-            call to action
+            <div id="welcome-schedule-wrapper">
+                <h2>Let's build something amazing together!</h2>
+                <button>Schedule a consultation</button>
+            </div>
         </div>
     </div>
 </div>
