--- a/public/views/index.html
+++ b/public/views/index.html
@@ -33,6 +33,7 @@
 <!--Injection of Angular modules-->
 
 <script type="text/javascript" src="../js/welcome.js"></script>
+<script type="text/javascript" src="../js/contact.js"></script>
 
 
 <!--Injection of Angular services-->
