--- a/public/views/templates/welcome.tpl.html
+++ b/public/views/templates/welcome.tpl.html
@@ -4,9 +4,8 @@
             <nav>
                 <a href="#/welcome">Logo</a>
                 <a href="#">Portfolio</a>
-                <a href="#">Contact</a>
+                <a href="#/contact">Contact</a>
                 <a href="#">Blog</a>
-                <a href="#">Schedule button</a>
             </nav>
         </div>
     </div>
@@ -38,15 +37,19 @@
     </div>
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid test-div">
     <div class="row">
         <div class="col-md-12 welcome-wrapper-two">
             <div id="dual-div-wrapper">
                 <div class="dual-div" id="left-dual-div">
                     <h2>Design.</h2>
+                    <p>
+                        Striking aesthetics.
+                    </p>
                 </div>
                 <div class="dual-div" id="right-dual-div">
                     <h2>Re-designed.</h2>
+                    <p>Refined performance.</p>
                 </div>
             </div>
         </div>
@@ -68,7 +71,7 @@
     <div class="row">
         <div class="col-md-12 col-xs-12 welcome-wrapper-four">
             <div id="welcome-schedule-wrapper">
-                <h2>Let's build something amazing together!</h2>
+                <h2>Let's build something amazing together.</h2>
                 <button>Schedule a consultation</button>
             </div>
         </div>
