meat and potatoes of contact page front end

--- a/public/views/templates/welcome.tpl.html
+++ b/public/views/templates/welcome.tpl.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-12 col-xs-12 welcome-header navbar-fixed-top">
             <nav>
-                <a href="#/welcome">Logo</a>
+                <a href="#/welcome">M | M</a>
                 <a href="#">Portfolio</a>
                 <a href="#/contact">Contact</a>
                 <a href="#">Blog</a>
