--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,6 @@ body {
 }
 
 .welcome-header nav a:hover {
-    color: red;
     text-decoration: none;
 }
 
@@ -209,4 +208,93 @@ body {
 
 #welcome-schedule-wrapper h2{
     font-size: 3em;
+}
+
+
+
+     /*Contact page styling*/
+
+.contact-header {
+    height: 80px;
+}
+
+.contact-header nav {
+    line-height: 80px;
+    text-align: center;
+}
+
+.contact-header nav a {
+    font-size: 1.9em;
+    margin-left: 10px;
+    margin-right: 10px;
+    color: white;
+}
+.contact-header nav a:first-child {
+    float: left;
+}
+
+.contact-header nav a:hover {
+    text-decoration: none;
+}
+
+.contact-picture-wrapper {
+    height: 100vh;
+    background-image: url("../images/dude-writing.jpg");
+    background-size: cover;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+}
+
+#contact-form-wrapper {
+    width: 85%;
+    height: 80%;
+    text-align: center;
+    border: 1px dotted;
+    margin: 0 auto;
+    margin-top: 120px;
+    padding-top: 45px;
+    background-color: black;
+    opacity: .9;
+}
+
+.half-pipe {
+    width: 40%;
+    margin-bottom: 30px;
+    font-size: 2.5em;
+    outline: none;
+}
+
+.full-pipe {
+    width: 80%;
+    margin-bottom: 30px;
+    font-size: 2.5em;
+    outline: none;
+
+}
+
+select {
+    display: none;
+}
+
+#contact-form-wrapper button {
+    background-color: transparent;
+    border: 2px solid white;
+    color: white;
+    font-size: 2em;
+    height: 60px;
+    width: 60px;
+    border-radius: 60px;
+    outline: none;
+    -webkit-transition: background-color .7s;
+    transition: background-color .7s;
+}
+
+#contact-form-wrapper button:hover {
+    color: black;
+    background-color: white;
+}
+
+#contact-form-wrapper button:active {
+    position: relative;
+    top: 2px;
 }
