--- a/public/views/templates/contact.tpl.html
+++ b/public/views/templates/contact.tpl.html
@@ -1,1 +1,39 @@
-{{message}}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12 col-xs-12 contact-header navbar-fixed-top">
+            <nav>
+                <a href="#/welcome">M | M</a>
+                <a href="#">Portfolio</a>
+                <a href="#/contact">Contact</a>
+                <a href="#">Blog</a>
+            </nav>
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12 col-xs-12 contact-picture-wrapper">
+            <div id="contact-form-wrapper">
+                <input type="text" class="half-pipe" placeholder="First Name" ng-model="firstName">
+                <input type="text" class="half-pipe" placeholder="Last Name" ng-model="lastName"><br>
+                <input type="text" class="full-pipe" placeholder="Company"><br>
+                <input type="tel" class="half-pipe" placeholder="Phone">
+                <input type="email" class="half-pipe" placeholder="Email"><br>
+                <select class="full-pipe">
+                    <option value="default">Please select a primary contact reason.</option>
+                    <optgroup label="Services">
+                        <option value="design">Design and UI consulting</option>
+                        <option value="dev">Development/Engineering</option>
+                    </optgroup>
+                    <optgroup label="Other">
+                        <option value="general">General Comment/Inquiry</option>
+                        <option value="edu">Teaching/Education</option>
+                    </optgroup>
+                </select><br>
+                <input type="url" class="full-pipe" placeholder="Current Website's URL (if applicable)">
+                <textarea  class="full-pipe" placeholder="Blah blah blah..."></textarea><br>
+                <button><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+            </div>
+        </div>
+    </div>
+</div>
