creation of blog template

--- a/public/views/templates/contact.tpl.html
+++ b/public/views/templates/contact.tpl.html
@@ -2,10 +2,10 @@
     <div class="row">
         <div class="col-md-12 col-xs-12 contact-header navbar-fixed-top">
             <nav>
-                <a href="#/welcome">M | M</a>
-                <a href="#">Portfolio</a>
+                <a href="#/welcome">M<span>|</span>M</a>
+                <a href="#portfolio">Portfolio</a>
                 <a href="#/contact">Contact</a>
-                <a href="#">Blog</a>
+                <a href="#/blog">Blog</a>
             </nav>
         </div>
     </div>
