--- a/public/views/index.html
+++ b/public/views/index.html
@@ -34,6 +34,7 @@
 
 <script type="text/javascript" src="../js/welcome.js"></script>
 <script type="text/javascript" src="../js/contact.js"></script>
+<script type="text/javascript" src="../js/blog.js"></script>
 
 
 <!--Injection of Angular services-->
