--- a/public/views/templates/welcome.tpl.html
+++ b/public/views/templates/welcome.tpl.html
@@ -2,10 +2,10 @@
     <div class="row">
         <div class="col-md-12 col-xs-12 welcome-header navbar-fixed-top">
             <nav>
-                <a href="#/welcome">M | M</a>
-                <a href="#">Portfolio</a>
+                <a href="#/welcome">M<span>|</span>M</a>
+                <a href="#/portfolio">Portfolio</a>
                 <a href="#/contact">Contact</a>
-                <a href="#">Blog</a>
+                <a href="#/blog">Blog</a>
             </nav>
         </div>
     </div>
@@ -17,10 +17,10 @@
                 <h1>Michael Montgomery</h1><br>
                 <h2>Full-Stack Web Developer | UI/UX Consultant</h2>
                 <ul>
-                    <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
-                    <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-                    <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
-                    <li><i class="fa fa-github" aria-hidden="true"></i></li>
+                    <li><a href="https://www.facebook.com/mjaymontgomery"><i class="fa fa-facebook" aria-hidden="true"></i></a> </li>
+                    <li><a href="https://www.twitter.com/loadsofcode"><i class="fa fa-twitter" aria-hidden="true"></i></a> </li>
+                    <li><a href="https://www.linkedin.com/in/meanstackmichael"><i class="fa fa-linkedin" aria-hidden="true"></i></a> </li>
+                    <li><a href="https://github.com/Michael-Montgomery"><i class="fa fa-github" aria-hidden="true"></i></a> </li>
                 </ul>
             </div>
 
@@ -72,7 +72,7 @@
         <div class="col-md-12 col-xs-12 welcome-wrapper-four">
             <div id="welcome-schedule-wrapper">
                 <h2>Let's build something amazing together.</h2>
-                <button>Schedule a consultation</button>
+                <button ng-click="goToContact()">Schedule a consultation</button>
             </div>
         </div>
     </div>
