added content and styling to portfolio page. Also built out CMS front-end

--- a/cms/views/index.html
+++ b/cms/views/index.html
@@ -8,12 +8,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!--Native stylesheet reference-->
     <link rel="stylesheet" href="../css/style.css">
-    <!--GFonts CDN-->
-    <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
     <!--Font Awesome CDN-->
     <script src="https://use.fontawesome.com/2c3779d488.js"></script>
 </head>
-<body ng-app="port">
+<body ng-app="manage">
 
 
 <ng-view></ng-view>
@@ -32,10 +30,10 @@
 
 <!--Injection of Angular modules-->
 
-<script type="text/javascript" src="../js/welcome.js"></script>
-<script type="text/javascript" src="../js/contact.js"></script>
-<script type="text/javascript" src="../js/blog.js"></script>
-<script type="text/javascript" src="../js/portfolio.js"></script>
+<script type="text/javascript" src="../js/contacts.js"></script>
+<script type="text/javascript" src="../js/login.js"></script>
+<script type="text/javascript" src="../js/manageBlog.js"></script>
+<script type="text/javascript" src="../js/managePortfolio.js"></script>
 
 
 <!--Injection of Angular services-->
