--- a/public/views/templates/contact.tpl.html
+++ b/public/views/templates/contact.tpl.html
@@ -6,6 +6,7 @@
                 <a href="#portfolio">Portfolio</a>
                 <a href="#/contact">Contact</a>
                 <a href="#/blog">Blog</a>
+                <a href='#/contact' ng-click="showMenu()"><i class="fa fa-bars" aria-hidden="true"></i></a>
             </nav>
         </div>
     </div>
@@ -34,6 +35,32 @@
                 <textarea  class="full-pipe" placeholder="Blah blah blah..."></textarea><br>
                 <button><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div id="contact-footer" class="col-md-12 navbar-fixed-bottom">
+
+            <h2>Michael Montgomery</h2>
+            <p>Full-Stack Web Developer | UI/UX Consultant</p>
+
+
+            <ul id="contact-menu-list">
+                <li><a href="#/welcome">Home</a> </li>
+                <li><a href="#/portfolio">Portfolio</a> </li>
+                <li><a href="#/contact">Contact</a> </li>
+                <li><a href="#/blog">Blog</a> </li>
+            </ul>
+
+            <ul id="contact-social-list">
+                <li><a href="https://www.facebook.com/mjaymontgomery"><i class="fa fa-facebook" aria-hidden="true"></i></a> </li>
+                <li><a href="https://www.twitter.com/loadsofcode"><i class="fa fa-twitter" aria-hidden="true"></i></a> </li>
+                <li><a href="https://www.linkedin.com/in/meanstackmichael"><i class="fa fa-linkedin" aria-hidden="true"></i></a> </li>
+                <li><a href="https://github.com/Michael-Montgomery"><i class="fa fa-github" aria-hidden="true"></i></a> </li>
+            </ul>
+
         </div>
     </div>
 </div>
