--- a/public/views/index.html
+++ b/public/views/index.html
@@ -38,6 +38,12 @@
 <script type="text/javascript" src="../js/portfolio.js"></script>
 
 
+<!--CMS-->
+<script type="text/javascript" src="../js/login.js"></script>
+<script type="text/javascript" src="../js/contacts.js"></script>
+<script type="text/javascript" src="../js/managePortfolio.js"></script>
+<script type="text/javascript" src="../js/manageBlog.js"></script>
+
 <!--Injection of Angular services-->
 
 <script type="text/javascript" src="../js/services/request.js"></script>
