git config stuff

--- a/public/views/templates/login.tpl.html
+++ b/public/views/templates/login.tpl.html
@@ -3,8 +3,9 @@
         <div class="col-md-12 col-xs-12">
             <form>
                 <i class="fa fa-id-badge" aria-hidden="true"></i><br />
-                <input type="password"><br />
-                <input type="password">
+                <input type="password" ng-model="email"><br />
+                <input type="password" ng-model="pass">
+                <button id="auth-butt">Go</button>
             </form>
         </div>
     </div>
