digital ocean stuff

--- a/public/views/templates/contact.tpl.html
+++ b/public/views/templates/contact.tpl.html
@@ -32,7 +32,7 @@
                     </optgroup>
                 </select><br>
                 <input type="url" class="full-pipe" placeholder="Current Website's URL (if applicable)" id="url">
-                <textarea  class="full-pipe" placeholder="Your message to Michael Montgomery:" id="message"></textarea><br>
+                <textarea  class="full-pipe" placeholder="Your message to Michael Montgomery" id="message"></textarea><br>
                 <button ng-click="sendContact()"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
             </div>
         </div>
