--- a/public/css/style.css
+++ b/public/css/style.css
@@ -300,6 +300,7 @@ body {
     margin-bottom: 30px;
     font-size: 2.5em;
     outline: none;
+    text-align: center;
 }
 
 .full-pipe {
@@ -307,6 +308,7 @@ body {
     margin-bottom: 30px;
     font-size: 2.5em;
     outline: none;
+    text-align: center;
 
 }
 
