--- a/public/views/index.html
+++ b/public/views/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Michael Montgomery</title>
+    <meta content="Central Florida web developer">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--Bootstrap CDN-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
